jquery updated, datepicker added + all views updated

--- a/HappyCows/Views/Calves/Details.cshtml
+++ b/HappyCows/Views/Calves/Details.cshtml
@@ -30,11 +30,18 @@
 
 
         <dt>
-            @Html.DisplayNameFor(model => model.MotherId)
+            @Html.DisplayNameFor(model => model.CowId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Mother.Name)
+            @Html.DisplayFor(model => model.Cow.Name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Note)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Note)
         </dd>
 
         <dt>
