--- a/HappyCows/Views/Calves/Index.cshtml
+++ b/HappyCows/Views/Calves/Index.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.DateOfBirth)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MotherId)
+            @Html.DisplayNameFor(model => model.CowId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Note)
@@ -38,7 +38,7 @@
             @Html.DisplayFor(modelItem => item.DateOfBirth)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Mother.Name)
+            @Html.DisplayFor(modelItem => item.Cow.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Note)
