--- a/HappyCows/Views/Calves/Edit.cshtml
+++ b/HappyCows/Views/Calves/Edit.cshtml
@@ -31,17 +31,17 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control" } })
+                <input id="date-picker" type="text" name="DateOfBirth" value="@string.Format("{0:d.M.yyyy.}", Model.DateOfBirth)" class="form-control" />
                 @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
             </div>
         </div>
 
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MotherId, "MotherId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CowId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("MotherId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MotherId, "", new { @class = "text-danger" })
+                @Html.DropDownList("CowId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CowId, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -67,4 +67,6 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/datepicker")
 }
