--- a/HappyCows/Views/Events/Delete.cshtml
+++ b/HappyCows/Views/Events/Delete.cshtml
@@ -5,19 +5,36 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Brisanje</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jeste li sigurni da želite obrisati ovo?</h3>
 <div>
-    <h4>Event</h4>
+    <h4>Događaj</h4>
     <hr />
     <dl class="dl-horizontal">
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.EventType)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.EventType)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CowId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Cow.Name)
         </dd>
 
         <dt>
@@ -29,21 +46,12 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Note)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Note)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Deleted)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Deleted)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.DateCreated)
         </dt>
@@ -58,8 +66,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Obriši" class="btn btn-default" /> |
+            @Html.ActionLink("Povratak na listu", "Index")
         </div>
     }
 </div>
