--- a/HappyCows/Views/Cows/Edit.cshtml
+++ b/HappyCows/Views/Cows/Edit.cshtml
@@ -29,7 +29,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.State, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.State, htmlAttributes: new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.State, htmlAttributes: new { @class = "form-control", disabled="disabled"})
                 @Html.ValidationMessageFor(model => model.State, "", new { @class = "text-danger" })
             </div>
         </div>
