--- a/HappyCows/Views/Shared/_Layout.cshtml
+++ b/HappyCows/Views/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        @*<footer>
             <p>&copy; @DateTime.Now.Year - Ivan Juric</p>
-        </footer>
+        </footer>*@
     </div>
 
     @RenderSection("scripts", required: false)
