--- a/HappyCows/Views/Cows/Index.cshtml
+++ b/HappyCows/Views/Cows/Index.cshtml
@@ -10,43 +10,47 @@
 <p>
     @Html.ActionLink("Dodaj novu", "Create")
 </p>
+@using (Html.BeginForm())
+{
+    <div style="display:flex">
+        <p style="position:relative;padding-top:7px">Stanje:</p> @Html.EnumDropDownListFor(model => model.FirstOrDefault().StateFilter, "Prikaži sve", htmlAttributes: new { @class = "form-control", @style = "margin-left:28px" })
+    </div>
+    <br />
+    <input type="submit" value="Filtriraj" />
+}
+<br />
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.ActionLink("Ime", "Index", new { sortOrder = ViewBag.NameSortParm, StateFilter = ViewBag.StateFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.State)
+            @Html.ActionLink("Stanje", "Index", new { sortOrder = ViewBag.StateSortParm, StateFilter = ViewBag.StateFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Note)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DurationOfState)
+            @Html.ActionLink("Trajanje", "Index", new { sortOrder = ViewBag.DurationSortParm, StateFilter = ViewBag.StateFilter })
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.State)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Note)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DurationOfState)
-        </td>
-        <td>
-            @Html.ActionLink("Uredi", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Detalji", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Obriši", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.State)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DurationOfState) dana
+            </td>
+            <td>
+                @Html.ActionLink("Uredi", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Detalji", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Obriši", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
