--- a/HappyCows/Views/Events/Index.cshtml
+++ b/HappyCows/Views/Events/Index.cshtml
@@ -10,50 +10,60 @@
 <p>
     @Html.ActionLink("Dodaj novi", "Create")
 </p>
+
+
+@using (Html.BeginForm())
+{
+    <div style="display:flex">
+        <p style="position:relative;padding-top:7px">Tip:</p> @Html.EnumDropDownListFor(model => model.FirstOrDefault().TypeFilter, "Prikaži sve", htmlAttributes: new { @class = "form-control", @style = "margin-left:28px" })
+    </div>
+    <br />
+    <div style="display:flex">
+        <p style="position:relative;padding-top:7px">Krava:</p>@Html.DropDownList("CowId", null, "Prikaži sve", htmlAttributes: new { @class = "form-control", @style = "margin-left:10px" })
+    </div>
+    <br />
+    <input type="submit" value="Filtriraj" />
+}
+<br />
 <table class="table">
     <tr>
 
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.ActionLink("Ime", "Index", new { sortOrder = ViewBag.NameSortParm, TypeFilter = ViewBag.TypeFilter, CowId = ViewBag.CowFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EventType)
+            @Html.ActionLink("Tip", "Index", new { sortOrder = ViewBag.TypeSortParm, TypeFilter = ViewBag.TypeFilter, CowId = ViewBag.CowFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CowId)
+            @Html.ActionLink("Krava", "Index", new { sortOrder = ViewBag.CowSortParm, TypeFilter = ViewBag.TypeFilter, CowId = ViewBag.CowFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EventDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Note)
+            @Html.ActionLink("Datum", "Index", new { sortOrder = ViewBag.DateSortParm, TypeFilter = ViewBag.TypeFilter, CowId = ViewBag.CowFilter })
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EventType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cow.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EventDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Note)
-        </td>
-        <td>
-            @Html.ActionLink("Uredi", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Detalji", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Obriši", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EventType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cow.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EventDate)
+            </td>
+            <td>
+                @Html.ActionLink("Uredi", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Detalji", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Obriši", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
